--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
       <div id="caption" class="ms-auto me-auto mt-5">
         <p>
           <sup>(1)</sup> Percent of voting power needed to halt block production. For most
-          chains using traditional BFT consensus (e.g. Tendermint) this number is 33+1%.
+          chains using traditional BFT consensus (e.g. Tendermint) this number is 33%+1.
           Some other consensus algorithms require higher percentages (e.g. Ethereum's
-          Gasper, 50+1%)
+          Gasper, 50%+1)
         </p>
         <p>
           <sup>(2)</sup> The minimum number of nodes or validators that can collude and
